# inspect_ai

evals/gaia/: README.md  pyproject.toml  requirements.txt
evals/gaia/gaia/: __init__.py  dataset.py  task.py
src/inspect_ai/_display/: rich.py
